[package]
name = "ipov"
version = "0.1.0"
authors = ["Aditya Thakral <aditya.1998thakral@gmail.com>", "Archer Zhang <archer.xn@gmail.com>", "Peter Huang <peter.huang339@gmail.com>", "Winnie Ren <winnierjren@gmail.com>"]

[dependencies]
hound = "3.4.0"
rand = "0.4.0"
hound = { git = "https://github.com/ruuda/hound" }